2007-01-19  J. Mowery  <jmowery@tresys.com>

	* all files now have correct copyright and license notices

2007-01-19  J. Tang  <jtang@tresys.com>

	* updated all help documentation

2007-01-17  J. Mowery  <jmowery@tresys.com>

	* updated all man pages

2007-01-17  J. Tang  <jtang@tresys.com>

	* added poldiff_type_remap_entry_get_is_inferred()

	* sediffx converted to use modular policies.

2007-01-08  J. Tang  <jtang@tresys.com>

	* apol converted to use modular policies.

2007-01-05  J. Mowery  <jmowery@tresys.com>

	* Added capability QPOL_CAP_SOURCE to detect ability to display
	  the policy source.

	* Deprecated qpol_policy_is_mls_enabled() use
	  qpol_policy_has_capability() for QPOL_CAP_MLS instead.

2007-01-04  J. Tang  <jtang@tresys.com>

	* seaudit converted to use modular policies.

2007-01-03  J. Tang  <jtang@tresys.com>

	* Deprecated apol_policy_open() and apol_policy_open_no_rules();
	use apol_policy_create_from_policy_path() instead.

2006-12-14  J. Tang  <jtang@tresys.com>

	* Added apol_policy_path_t object.  This is needed because policy
	paths are not just a single string, but rather a base policy and
	any number of modules.

	* New functions apol_config_join_var() generalized to be
	apol_str_join().  Same with apol_config_split_var() ->
	apol_str_split().

2006-12-12  J. Tang  <jtang@tresys.com>

	* Renamed qpol_find_default_policy_file() in qpol/policy.h to
	qpol_default_policy_find() in qpol/util.h.  Removed
	qpol_find_default_policy_file_strerr().  These functions were
	never supposed to be in these locations.

	* Deprecated apol_policy_is_binary(); use qpol policy capabilities
	instead.

	* Deprecated qpol_open_policy_from_file(); it is now called
	qpol_policy_open_from_file().  Similar change to
	qpol_open_policy_from_file_no_rules() and
	qpol_open_policy_from_memory().

	* Merged qpol/policy_query.h into qpol/policy.h.  Split module
	related code into qpol/module.h.

	* Rewrite of seaudit to utilize libseaudit.so.4; tweaked numerous